# aoc-2022

./: .gitignore  Cargo.toml  README.md  watch.sh
src/: lib.rs
