[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
derive_more = "0.99.17"
petgraph = "0.6.2"
pathfinding = { git = "https://github.com/samueltardieu/pathfinding", rev = "33e03ab726e998fe9556633626f145954a0b0fe4" }
stringtools = { git = "https://github.com/danielhuang/stringtools" }
regex = "1.7.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
cached = "0.26.2"
lazy-regex = "2.3.1"
seahash = "4.1.0"
rustc-hash = "1.1.0"
defaultmap = "0.5.0"
cli-clipboard = "0.3.0"
owo-colors = "3.5.0"
btreelist = "0.4.0"
reqwest = { version = "0.11.13", features = ["blocking", "cookies"] }
mimalloc = { version = "0.1.32", default-features = false }
num = "0.4.0"
rayon = "1.6.1"

[profile.dev]
opt-level = 2

[profile.release]
debug = true
overflow-checks = true
